--- a/src/App.css
+++ b/src/App.css
@@ -150,6 +150,10 @@ header {
     text-align: center;
 }
 
+.nearby-button-container:hover {
+    cursor: pointer;
+}
+
 .sidebar-icon {
     font-size: 48px;
     margin-bottom: 20px;
@@ -165,6 +169,10 @@ header {
     top: -592px;
     left: 150px;
     color: white;
+}
+
+.overlay-button:hover {
+    cursor: pointer;
 }
 
 .fa-share {
@@ -207,7 +215,10 @@ header {
     width: 180px;
     height: 35px;
     border-radius: 5px;
-/*    margin-top: 6px;*/
+}
+
+.slider-list-button:hover {
+    cursor: pointer;
 }
 
 .slider-list-button h3 {
@@ -228,6 +239,12 @@ header {
     width: 40px;
     border: 0px solid white;
     top: 69px;
+}
+
+.slider-left:hover,
+.slider-right:hover {
+    cursor: pointer;
+    background-color: #44b244;
 }
 
 .slider-left {
@@ -269,6 +286,10 @@ header {
     text-align: center;
     position: relative;
     top: -34px;
+}
+
+.amenity-list-button:hover {
+    cursor: pointer;
 }
 
 .amenity-list-button h3 {
