--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@ h4 {
 }
 
 .app-component {
-    width: 680px;
+    width: 100%;
     margin: auto;
 }
 
@@ -80,11 +80,12 @@ h4 {
 }
 
 header {
-    width: 680px;
+    width: 100%;
     height: 45px;
     background-color: #000000;
     box-shadow: inset 0px 3px 0 0 #44b244;
     padding: 14px 0 0 10px;
+    position: fixed;
 }
 
 .header-text {
@@ -103,13 +104,12 @@ header {
     margin: 0 0 0 0;
 }
 
-.location-container {
+.location-container,
+.home-container {
     width: 680px;
     height: 692px;
-    border: 1px solid gray;
-    border-top: 0px solid gray;
-    padding: 14px;
-    margin: 0;
+    padding: 58px 0 0 0;
+    margin: auto;
 }
 
 .content-container {
@@ -248,14 +248,14 @@ header {
 }
 
 .slider-left {
-    left: -112px;
+    left: -113px;
     text-align: left;
     border-top-right-radius: 50px;
     border-bottom-right-radius: 50px;
 }
 
 .slider-right {
-    left: 113px;
+    left: 112px;
     text-align: right;
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
