--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,7 @@ header {
     box-shadow: inset 0px 3px 0 0 #44b244;
     padding: 14px 0 0 10px;
     position: fixed;
+    z-index: 100;
 }
 
 .header-text {
